--- a/Material-Discord/css/source.css
+++ b/Material-Discord/css/source.css
@@ -955,7 +955,7 @@ body,
   height: 22px; }
 
 .wordmark-2iDDfm:before {
-  content: "Material";
+  content: "Alpha";
   font-weight: 700; }
 
 .wordmark-2iDDfm:after {
